# adventofcode

./: Makefile  README.md  day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day2.ipynb  day3.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb  pyproject.toml
2015/: README.md  shard.yml
2018/: README.md  adventofcode.cabal  package.yaml
2019/: Makefile  README.md  day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb  intcode.py  pyproject.toml
2020/: Makefile  README.md  shard.yml
2021/: README.md  build.sbt
2022/: adventofcode.cabal
2023/: day01.go  day01_test.go  day02.go  day03.go  day03_test.go  day04.go  day04_test.go  day05.go  day05_test.go  day06.go  day07.go  day07_test.go  day08.go  day08_test.go  day09.go  day09_test.go  day10.go  day11.go  day11_test.go  day12.go  day12_test.go  day13.go  day13_test.go  day14.go  day14_test.go  day15.go  day15_test.go  day16.go  day17.go  day17_test.go  day18.go  day18_test.go  day19.go  day19_test.go  day20.dot  day20.go  day20.py  day20_test.go  day21.go  day22.go  (+9 more)
2024/: Makefile  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day15_moves.txt  day15_p1_grid.txt  day15_p2_grid.txt  day16.py  day17.py  day18.py  day19.py  grid.py  pyproject.toml
2025/: Makefile  README.md  (+29 more)
(+186 files in other folders)
