[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Alexandre Morignot <erdnaxeli@cervoi.se>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
jupyterlab = "^3.6"
trio = "^0.13.0"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
